--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <script>
         const validCommands = {
-            "cmds": "Available commands: github, discord, roblox, visionhub, clear",
+            "help": "Available commands: github, discord, roblox, visionhub, clear",
             "github": "Opened in new tab!",
             "discord": "Opened in new tab!",
             "roblox": "Opened in new tab!",
